* Make Element#getOffsetParent follow the W3C specifications and treat TD, TH, and TABLE elements as valid offset parents. [jddalton]

* Make Element#cumulativeScrollOffset induce "onlyAncestors" on input fields and textareas. [#512 state:resolved] [Alex Farrill, jddalton]

* Add optional boolean second parameter, "onlyAncestors", to Element#cumulativeScrollOffset.
  When "onlyAncestors" is true only the element's ancestors scroll offsets are totaled. [jddalton]

* Cleanup minor whitespace/formatting in helpers.js and event.js as well as rewrite the "testObserverExecutionOrder" event unit test. [jddalton]

* Create an optimized Array#invoke that avoids Array#map and uses reverse while-loops. [jddalton]

* Optimize Function#(bind|bindAsEventListener) by avoiding mergeList() when no arguments are passed. [Garrett Smith, jddalton]

* Make the Event dispatcher create a clone of its handlers before executing to avoid issues with nested observe/stopObserving calls. [Diego Perini, jddalton]
  Note: This update exposes a bug in Gecko/WebKit browsers when dealing with nested stopObserving calls.

* Optimize Element.extend() further by replacing for-in loops with reverse while-loops. [jddalton]

* Fix IE error when passing a malformed string to document.getElementById()/document.getElementByTagName(). Closes #11568. [gryn, jddalton, kangax]

* Add Feature test FUNCTION_TO_STRING_RETURNS_SOURCE in preparation for Class rewrite. [jddalton]

* Add Element#isFragment to detect if an element is an unattached fragment or a child of one. [jddalton]

* Fix issue, in quirks mode, where versions of Safari, before 3.1.2, treat class names case-insensitively in Selector/$$ queries. [#390 state:resolved] [Andrew Dupont, Brice, kangax]

* Make String#strip use custom whitespace character class for browsers missing full support. [dimik, doug, jddalton, kangax]
  Originally reported on http://dev.jquery.com/ticket/2690.
